--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
 	"name": "@johntalton/adt7410",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"type": "module",
 	"exports": {
 		".": "./lib/index.js"
 	},
+	"files": [ "./src/**/*.ts", "./lib/**/*.ts","./lib/**/*.map" ],
 	"scripts": {
 		"build": "tsc",
 		"build:watch": "tsc --watch"
 	},
 	"dependencies": {
-		"@johntalton/and-other-delights": "^6.0.0",
-		"@johntalton/bitsmush": "^1.0.0"
+		"@johntalton/and-other-delights": "^7.0.0",
+		"@johntalton/bitsmush": "^1.0.1"
 	},
 	"devDependencies": {
-		"typescript": "^4.9.3"
+		"typescript": "^5.4.5"
 	}
 }
