--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
 	"name": "@johntalton/adt7410",
-	"version": "1.0.2",
+	"version": "2.0.0",
 	"type": "module",
 	"exports": {
 		".": "./lib/index.js"
 	},
-	"files": [ "./src/**/*.ts", "./lib/**/*.js", "./lib/**/*.ts", "./lib/**/*.map" ],
+	"files": [
+		"./src/**/*.ts",
+		"./lib/**/*.js",
+		"./lib/**/*.ts",
+		"./lib/**/*.map"
+	],
 	"scripts": {
 		"build": "tsc",
 		"build:watch": "tsc --watch"
 	},
 	"dependencies": {
-		"@johntalton/and-other-delights": "^7.0.0",
+		"@johntalton/and-other-delights": "^8.0.1",
 		"@johntalton/bitsmush": "^1.0.1"
 	},
 	"devDependencies": {
