--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "@johntalton/adt7410",
-	"version": "2.0.1",
+	"version": "2.0.2",
+	"license": "MIT",
 	"type": "module",
 	"exports": {
 		".": "./lib/index.js"
@@ -21,5 +22,8 @@
 	},
 	"devDependencies": {
 		"typescript": "^5.9.2"
+	},
+	"repository": {
+		"url": "https://github.com/johntalton/adt7410"
 	}
 }
